main image for Tritix

--- a/_posts/games/2019-01-01-Tritix.md
+++ b/_posts/games/2019-01-01-Tritix.md
@@ -4,6 +4,6 @@ title: "TRITIX"
 role: "Solo Developer"
 categories: [games]
 permalink: /games/TRITIX/
-mainImage: "https://via.placeholder.com/500"
+mainImage: "/assets/images/tritix-main.PNG"
 ---
 # TRITIX
