Added overlay transition + font for game page

--- a/_posts/games/2019-01-01-Tritix.md
+++ b/_posts/games/2019-01-01-Tritix.md
@@ -4,6 +4,6 @@ title: "TRITIX"
 role: "Solo Developer"
 categories: [games]
 permalink: /games/TRITIX/
-mainImage: "/assets/images/tritix-main.PNG"
+previewImage: "/assets/images/Tritix/Tritix-Preview.png"
 ---
-# TRITIX
+Content Goes Here
