Fleshed Out TRITIX page

--- a/_posts/games/2019-01-01-Tritix.md
+++ b/_posts/games/2019-01-01-Tritix.md
@@ -5,5 +5,31 @@ role: "Solo Developer"
 categories: [games]
 permalink: /games/TRITIX/
 previewImage: "/assets/images/Tritix/Tritix-Preview.png"
+screenshots: [
+    "/assets/images/Tritix/Tritix-Preview.png",
+    "/assets/images/Tritix/tritix-main-menu.jpg",
+    "/assets/images/Tritix/tritix-board-1.jpg",
+    "/assets/images/Tritix/tritix-board-2.jpg"
+]
 ---
-Content Goes Here
+<div class="google-play-badge__container">
+    <a href='https://play.google.com/store/apps/details?id=com.jello.triplex&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+        <img alt='Get it on Google Play' class="google-play-badge" src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/>
+    </a>
+</div>
+# Description
+TRITIX is a 3-dimensional game of Tic-Tac-Toe played between 2 players each with 4 different pieces on a board consisting of 3 layers.
+## Features:
+* Local Pass & Play
+* 3 Levels of AI opponents
+* Online Multiplayer
+
+Based on the original board game [TRIPLEX](https://triplexthe3dboardgame.com/) (Created by L Wood James)
+
+---
+# About the Project:
+This was my first game that I made with Unity and was made over the course of a year of on & off development in my spare time.
+
+I was the sole developer and handled everything including the programming, UI design, finding suitable Assets, release on Google Play, etc.
+
+If you are curious about how it was made, I've opened up the entire codebase on [GitHub](https://github.com/jaideng123/TRITIX)
