Filled out page for SpeedButton

--- a/_posts/games/2019-01-01-Tritix.md
+++ b/_posts/games/2019-01-01-Tritix.md
@@ -28,7 +28,7 @@ Based on the original board game [TRIPLEX](https://triplexthe3dboardgame.com/) (
 
 ---
 # About the Project:
-This was my first game that I made with Unity and was made over the course of a year of on & off development in my spare time.
+This was my first game that I made with Unity and was made over the course of a year of on & off development in my spare time. The reason I decided to recreate this game was because I had played it in a local boardgame shop and the next time I went, it had disappeared.
 
 I was the sole developer and handled everything including the programming, UI design, finding suitable Assets, release on Google Play, etc.
 
