Content for MowMowMow and ArrowBall

--- a/_posts/games/2019-01-01-Tritix.md
+++ b/_posts/games/2019-01-01-Tritix.md
@@ -28,8 +28,14 @@ Based on the original board game [TRIPLEX](https://triplexthe3dboardgame.com/) (
 
 ---
 # About the Project:
+**Made with:** Unity, Facebook SDK for login, GameSparks for multiplayer
+
 This was my first game that I made with Unity and was made over the course of a year of on & off development in my spare time. The reason I decided to recreate this game was because I had played it in a local boardgame shop and the next time I went, it had disappeared.
 
 I was the sole developer and handled everything including the programming, UI design, finding suitable Assets, release on Google Play, etc.
+
+For the multiplayer I originally implemented a solution that used DynamoDB with AWS but eventually decided to switch to GameSparks because they had a very generous free plan for indies and could accomodate any scaling needs much better than I could have at the time.
+
+Funnily enough the feature that took the longest was the outline of pieces, I knew nothing about shaders at the time and used this feature as an excuse to take a video course on them, but when I finally got to the point where I could make it, the method I learned required a 2-pass shader (which LWRP didn't support at the time), so instead the outline is a separate mesh, slightly scaled up with front face culling enabled.
 
 If you are curious about how it was made, I've opened up the entire codebase on [GitHub](https://github.com/jaideng123/TRITIX)
