--- a/_posts/games/2019-01-01-Tritix.md
+++ b/_posts/games/2019-01-01-Tritix.md
@@ -30,6 +30,8 @@ Based on the original board game [TRIPLEX](https://triplexthe3dboardgame.com/) (
 # About the Project:
 **Made with:** Unity, Facebook SDK for login, GameSparks for multiplayer
 
+**Project Length:** 1 Year
+
 This was my first game that I made with Unity and was made over the course of a year of on & off development in my spare time. The reason I decided to recreate this game was because I had played it in a local boardgame shop and the next time I went, it had disappeared.
 
 I was the sole developer and handled everything including the programming, UI design, finding suitable Assets, release on Google Play, etc.
