Added Deep Dig Pizza

--- a/_posts/games/2020-10-01-OutLoop.md
+++ b/_posts/games/2020-10-01-OutLoop.md
@@ -28,6 +28,8 @@ Made in 72 Hours for Ludum Dare 47
 # About the Project
 **Made with:** Unity
 
+**Role:** Programmer / Gameplay Designer
+
 **Project Length:** 72 Hours
 
 I made Out-Loop with a team of 4, where I served as gameplay programmer and designer.
