Added Scratch + reorganized games

--- a/_posts/games/2019-01-01-Tritix.md
+++ b/_posts/games/2019-01-01-Tritix.md
@@ -5,7 +5,7 @@ role: "Solo Developer"
 categories: [games]
 permalink: /games/TRITIX/
 previewImage: "/assets/images/Tritix/Tritix-Preview.png"
-fullRelease: true
+category: full-release
 screenshots: [
     "/assets/images/Tritix/Tritix-Preview.png",
     "/assets/images/Tritix/tritix-main-menu.jpg",
