--- a/_posts/games/2020-10-01-OutLoop.md
+++ b/_posts/games/2020-10-01-OutLoop.md
@@ -6,6 +6,7 @@ categories: [games]
 permalink: /games/OutLoop/
 previewImage: "/assets/images/OutLoop/cover.png"
 imageNeedsText: true
+category: game-jam
 screenshots: [
     "/assets/images/OutLoop/Screenshot1.png",
     "/assets/images/OutLoop/Screenshot2.png",
