Updated Scratch About

--- a/_posts/games/2020-12-01-Scratch3D.md
+++ b/_posts/games/2020-12-01-Scratch3D.md
@@ -30,7 +30,7 @@ The code is fully open-source and available at [https://github.com/jaideng123/Sc
 
 **Role:** Sole Developer
 
-**Project Length:** 3-ish months
+**Project Length:** 1 year (on and off)
 
 My main motivation for starting this project was to learn a bit more about how rendering engines work under the hood and de-rust my C++ skills(since I mostly work in Unity).
 
@@ -43,3 +43,19 @@ Once I had the basic scene working, I started adding editor features to make lif
 In addition to the new UI features I also added serialization for the entire scene. I chose JSON as my file format because it would be easy to debug and I had a lot of experience with it(even though it can be a little slow). Serialization and Deserialization changed a fair amount of my architecture and forced me to reckon with some unfortunate architecture decisions I made early on, but after some re-jiggering I was able to get it working with minimal hacks.
 
 As of writing, this project has taken quite a bit of time and effort so I'm shelving it for the time being, but I will likely tinker with it some more when I get more time and find something I really want to implement using it.
+
+**Update 01/11/2022**
+Since I had some free time over the holiday, I decided to come back to this project and fix some of the things that were bothering me about the overall structure.
+
+I started by mapping out the current structure of the engine along with the main goals I had in mind for the refactor, those being:
+1. The ability to cache resources (model data, textures, materials, etc.)
+2. A simpler, more flexible rendering API, that could support culling in the future
+3. Material instancing so that all entities didn't have to share materials
+
+To accomplish goal number 1, I created a resource manager that would hold all the various resources in memory and when called for a resource, check if it had been loaded into memory before loading it. This madee all my loading MUCH more efficient, loading 100 of the same model used to take a few minutes and now takes seconds. It also had the knock-on effect of making my structure much cleaner by defining a clear owner for these resources. In the future this resource manager could also evict unused resources to free up memory, but right now the scale of my scenes don't really necessitate it.
+
+For goal number 2, I looked to inspiration from Unity, as they have a pretty clean, simple interface for submitting things to be rendered. Originally, I had hacked in the transform matrix as a part of the material, but now looking back in hindsight this was VERY BAD, caused a lot of problems, and just didnt make a lot of sense. In the new API, you just need to submit a mesh, a material, and a transform, and we store them all separately until it's time to render, much cleaner and much simpler. Another thing I wanted to simplify was the way renders were triggered, before I had a very clumsy process that had the scene gathering up all the meshes, but now that we could just arbitrarily submit them and let the render system hold onto them for the frame, a render call just needs a camera, and a directional light. In the future I'm planning to use the camera to do frustrum culling, add a depth prepass, and sort the render queue by material to squeeze more performance out of the overall system.
+
+The last goal didn't work out as well as I'd hoped, the solution I ended up going with forced each entity to contain a material instance (copied from a default material set when a model is first loaded). This allowed for each object in a scene to have separate material properties but also meant I could no longer batch materials together during renders. I'll have to do some more research and thinking about a better system I could use here, because I'm definitely not happy with the curent system.
+
+I also took this opportunity to address some low-hanging fruit like the ability to set shaders on each material, store material properties as binary data instead of strings (which led to a 2x perf increase), pulling Scene out into a proper object, and cleaning up a lot of my TODOs that I left behind.
