Added page for SleepSpace, still needs post-mortem

--- a/_posts/games/2020-10-01-OutLoop.md
+++ b/_posts/games/2020-10-01-OutLoop.md
@@ -29,7 +29,7 @@ Made in 72 Hours for Ludum Dare 47
 # About the Project
 **Made with:** Unity
 
-**Role:** Programmer / Gameplay Designer
+**Role:** Programmer & Gameplay Designer
 
 **Project Length:** 72 Hours
 
