More work, setting up quick descriptions

--- a/_posts/games/2019-01-01-Tritix.md
+++ b/_posts/games/2019-01-01-Tritix.md
@@ -13,6 +13,17 @@ screenshots: [
     "/assets/images/Tritix/tritix-board-2.jpg"
 ]
 ---
+**What I did:** 
+
+**Project Length:** 1 Year
+
+**Team Size:** 1 (Solo Project)
+
+**Platforms:** Android (Google Play Store)
+
+**Engine & Tools:** Unity, Facebook SDK for login, GameSparks for multiplayer
+<!--more-->
+
 <div class="google-play-badge__container">
     <a href='https://play.google.com/store/apps/details?id=com.jello.triplex&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
         <img alt='Get it on Google Play' class="google-play-badge" src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/>
