--- a/_posts/games/2020-10-01-OutLoop.md
+++ b/_posts/games/2020-10-01-OutLoop.md
@@ -14,6 +14,16 @@ screenshots: [
     "/assets/images/OutLoop/Screenshot4.png",
 ]
 ---
+**What I did:** 
+
+**Project Length:** 2 days
+
+**Team Size:** 4
+
+**Platforms:** WebGL
+
+**Engine & Tools:** Unity
+<!--more-->
 <div class="itch-container">
 <iframe src="https://itch.io/embed/785113?border_width=2&amp;bg_color=fec2f7&amp;border_color=9f00c9" width="554" height="169" frameborder="0"><a href="https://jaideng123.itch.io/out-loop">Out-Loop by Jaiden Gerig</a></iframe>
 </div>
