--- a/_posts/games/2020-12-01-Scratch3D.md
+++ b/_posts/games/2020-12-01-Scratch3D.md
@@ -13,6 +13,16 @@ screenshots: [
 ]
 ---
 
+**What I did:** 
+
+**Project Length:** 1 year (on and off)
+
+**Team Size:** 1 (Solo Project)
+
+**Platforms:** Windows, Linux
+
+**Engine & Tools:** C++, OpenGL, ImGui
+<!--more-->
 # Description
 Scratch-3D is a 3D rendering engine I've been working on as a pet project.
 
