--- a/_posts/games/2021-11-01-Rebound.md
+++ b/_posts/games/2021-11-01-Rebound.md
@@ -14,6 +14,17 @@ screenshots: [
     "/assets/images/Rebound/Rebound-lust.png",
 ]
 ---
+**What I did:** 
+
+**Project Length:** 2 weeks
+
+**Team Size:** 5
+
+**Platforms:** WebGL, Windows
+
+**Engine & Tools:** Unity
+<!--more-->
+
 <div class="itch-container">
 <iframe src="https://itch.io/embed/1265597?border_width=2&amp;bg_color=b86f50&amp;fg_color=ffffff" width="554" height="169" frameborder="0"><a href="https://jaideng123.itch.io/rebound">Rebound by Jaiden Gerig, Brandon Garcia, lzklein, bordenary, zruby</a></iframe>
 </div>
