--- a/_posts/games/2021-11-01-Rebound.md
+++ b/_posts/games/2021-11-01-Rebound.md
@@ -13,6 +13,7 @@ screenshots: [
     "/assets/images/Rebound/Rebound-fire.gif",
     "/assets/images/Rebound/Rebound-lust.png",
 ]
+priority: 8 
 ---
 **What I did:** 
 
