Finally got prioritized games working

--- a/_posts/games/2020-11-01-FCGames.md
+++ b/_posts/games/2020-11-01-FCGames.md
@@ -1,10 +1,10 @@
 ---
 layout: game
 title: "FCGames"
-role: "Programmer"
+role: "Engineer & Designer"
 categories: [games]
 permalink: /games/FCGames/
-previewImage: "/assets/images/SpeedButton/SpeedButton-Preview.png "
+previewImage: "/assets/images/FCGames/fcgames.jpg "
 imageNeedsText: true
 category: job
 screenshots: []
