Finally Done Mostly

--- a/_posts/games/2019-01-01-Tritix.md
+++ b/_posts/games/2019-01-01-Tritix.md
@@ -13,7 +13,9 @@ screenshots: [
     "/assets/images/Tritix/tritix-board-2.jpg"
 ]
 ---
-**What I did:** 
+**What I did:**
+
+Adapted a game by a local board-game designer to Android using Unity. I designed and built the UI interface, encoded the rules of the game into a digital format, created game modes to play against a computer or other players online, and wrote shaders for the various visual effects.
 
 **Project Length:** 1 Year
 
