--- a/_posts/games/2020-10-01-OutLoop.md
+++ b/_posts/games/2020-10-01-OutLoop.md
@@ -16,7 +16,9 @@ screenshots: [
 ---
 **What I did:** 
 
-**Project Length:** 2 days
+Made Out-Loop over 72 hours with a team of 4, where I served as gameplay programmer and designer. I designed and implemented the car driving mechanics, evolving track, as well as the overall gameplay mechanic of building up to a big jump.
+
+**Project Length:** 3 days
 
 **Team Size:** 4
 
