--- a/_posts/games/2020-11-01-FCGames.md
+++ b/_posts/games/2020-11-01-FCGames.md
@@ -1,16 +1,20 @@
 ---
 layout: game
-title: "FCGames"
+title: "FC Games"
 role: "Engineer & Designer"
 categories: [games]
 permalink: /games/FCGames/
-previewImage: "/assets/images/FCGames/fcgames.jpg "
+previewImage: "/assets/images/FCGames/fcgames.jpg"
 imageNeedsText: true
 category: job
-screenshots: []
+screenshots: ["/assets/images/FCGames/fcgames.jpg"]
 priority: 1
 ---
 **What I did:** 
+
+I worked on a scrappy team consisting mostly of engineers to create games and systems designed to entertain workers at Amazon Fulfillment Centers.
+
+Major contributions include designing, authoring, and building a new tutorial system to on-board players, a system for large-scale player contests, and a cross-game progression system.
 
 **Project Length:** 2 Years
 
@@ -20,3 +24,19 @@ priority: 1
 
 **Engine & Tools:** Unity, Amazon Web Services
 <!--more-->
+
+Due to NDA I'm not able to share more specific details about my work on this project publicly.
+
+**What I did:** 
+
+I worked on a scrappy team consisting mostly of engineers to create games and systems designed to entertain workers at Amazon Fulfillment Centers.
+
+Major contributions include designing, authoring, and building a new tutorial system to on-board players, a system for large-scale player contests, and a cross-game progression system.
+
+**Project Length:** 2 Years
+
+**Team Size:** 8
+
+**Platforms:** WebGl
+
+**Engine & Tools:** Unity, Amazon Web Services
