--- a/_posts/games/2020-12-01-Scratch3D.md
+++ b/_posts/games/2020-12-01-Scratch3D.md
@@ -13,7 +13,11 @@ screenshots: [
 ]
 ---
 
-**What I did:** 
+**What I did:**
+
+Built a game engine from scratch as a learning project to better understand the internals of engines and rendering systems.
+
+It has a fully featured scene editor that allows for quick positioning and editing of shader properties. It can also serialize and load scenes to and from a json file.
 
 **Project Length:** 1 year (on and off)
 
