--- a/_posts/games/2021-11-01-Rebound.md
+++ b/_posts/games/2021-11-01-Rebound.md
@@ -17,6 +17,13 @@ priority: 8
 ---
 **What I did:** 
 
+Reunited with (most of) the Where's My Keys team to create a relaxing game about repairing old books over 2 weeks for the 2021 Seattle Indies Slow Jam.
+
+Since the programmer I partnered with on the previous projects was unavailable, I acted as the sole engineer and gameplay designer for the project.
+
+I created a system for painting arbitrary models, a small art pipeline + system for procedural generation of books to repair, a guided tutorial system, a few easter eggs, and pretty much everything related to the overall flow of the game.
+
+
 **Project Length:** 2 weeks
 
 **Team Size:** 5
