Finish Draft of DGMax

--- a/_posts/games/2020-10-01-OutLoop.md
+++ b/_posts/games/2020-10-01-OutLoop.md
@@ -22,7 +22,7 @@ Made Out-Loop over 72 hours with a team of 4, where I served as gameplay program
 
 **Team Size:** 4
 
-**Platforms:** WebGL
+**Platforms:** WebGL (itch.io)
 
 **Engine & Tools:** Unity
 <!--more-->
