--- a/_posts/games/2020-11-01-FCGames.md
+++ b/_posts/games/2020-11-01-FCGames.md
@@ -20,7 +20,7 @@ Major contributions include designing, authoring, and building a new tutorial sy
 
 **Team Size:** 8
 
-**Platforms:** WebGl
+**Platforms:** Desktop (Custom Distribution)
 
 **Engine & Tools:** Unity, Amazon Web Services
 <!--more-->
