--- a/_posts/games/2021-11-01-Rebound.md
+++ b/_posts/games/2021-11-01-Rebound.md
@@ -28,7 +28,7 @@ I created a system for painting arbitrary models, a small art pipeline + system 
 
 **Team Size:** 5
 
-**Platforms:** WebGL, Windows
+**Platforms:** WebGL, Windows (itch.io)
 
 **Engine & Tools:** Unity
 <!--more-->
