--- a/_posts/games/2024-09-26-DUETween.md
+++ b/_posts/games/2024-09-26-DUETween.md
@@ -29,12 +29,11 @@ Working on a tweeening framework plugin for Unreal Engine (similar to DOTween in
 Current features:
 - Supports extended library of easing functions.
 - Lean and efficient using ~1.5mb memory and ticking at <1ms for 4000 concurrent tweens.
-- Uses reflection to conveniently tween UPropertys with only a field name.
+- Uses reflection to conveniently tween UPropertys with via field names.
 - Blueprint & C++ APIs.
 
 
-
-Full plugin release is still pending, for now it lives in the [Yuu Bowling Github Repo](https://github.com/jaideng123/UnrealBowling/tree/master/Plugins/DUETween) while I work out all the kinks.
+Full plugin release is still pending, for now it lives as a local plugin in the [Yuu Bowling Github Repo](https://github.com/jaideng123/UnrealBowling/tree/master/Plugins/DUETween) while I work out all the kinks.
 
 ---
 # About the Project
