More Little Updates

--- a/_posts/games/2024-09-26-DUETween.md
+++ b/_posts/games/2024-09-26-DUETween.md
@@ -15,9 +15,9 @@ priority: 8
 ---
 **What I did:** 
 
-Working on a tweening framework plugin for Unreal Engine (similar to DOTween in Unity) that is fast, memory efficient, and scalable while also being convient to use with both C++ and Blueprint APIs.
+Created a tweening framework plugin for Unreal Engine (similar to DOTween in Unity) that is convenient and easy to use with both C++ and Blueprint APIs, while also being fast, memory efficient, and scalable.
 
-Currently I am testing it out as a local plugin in Yuu Bowling before a wider release.
+Currently I am testing it out as a local plugin in Yuu Recreations Bowling before a wider release.
 
 **Engine & Tools:** Unreal Engine, C++
 <!--more-->
@@ -27,10 +27,10 @@ Currently I am testing it out as a local plugin in Yuu Bowling before a wider re
 Working on a tweeening framework plugin for Unreal Engine (similar to DOTween in Unity) that is fast, memory efficient, and scalable while also being convient to use by supporting usage in both C++ and Blueprints.
 
 Current features:
-- Supports extended library of easing functions.
+- Provides an extended library of easing functions (more than what Unreal supports out of the box).
 - Lean and efficient using ~1.5mb memory and ticking at <1ms for 4000 concurrent tweens.
-- Uses reflection to conveniently tween UPropertys with via field names.
-- Blueprint & C++ APIs.
+- Use reflection to conveniently tween UProperties with via field names.
+- Both Blueprint & C++ APIs.
 
 
 Full plugin release is still pending, for now it lives as a local plugin in the [Yuu Bowling Github Repo](https://github.com/jaideng123/UnrealBowling/tree/master/Plugins/DUETween) while I work out all the kinks.
@@ -41,4 +41,3 @@ Full plugin release is still pending, for now it lives as a local plugin in the 
 
 **Role:** Sole Programmer
 
-(Coming Soon)
