--- a/_posts/games/2024-09-26-DUETween.md
+++ b/_posts/games/2024-09-26-DUETween.md
@@ -24,7 +24,7 @@ Currently I am testing it out as a local plugin in Yuu Recreations Bowling befor
 
 
 # Description
-Working on a tweeening framework plugin for Unreal Engine (similar to DOTween in Unity) that is fast, memory efficient, and scalable while also being convient to use by supporting usage in both C++ and Blueprints.
+Working on a tweening framework plugin for Unreal Engine (similar to DOTween in Unity) that is fast, memory efficient, and scalable while also being convenient to use by supporting usage in both C++ and Blueprints.
 
 Current features:
 - Provides an extended library of easing functions (more than what Unreal supports out of the box).
