Fixing embed images for portfolio entiries

--- a/_posts/games/2019-01-01-Tritix.md
+++ b/_posts/games/2019-01-01-Tritix.md
@@ -4,7 +4,7 @@ title: "TRITIX"
 role: "Solo Developer"
 categories: [games]
 permalink: /games/TRITIX/
-previewImage: "/assets/images/Tritix/Tritix-Preview.png"
+image: "/assets/images/Tritix/Tritix-Preview.png"
 category: full-release
 screenshots: [
     "/assets/images/Tritix/Tritix-Preview.png",
