--- a/_posts/games/2020-10-01-OutLoop.md
+++ b/_posts/games/2020-10-01-OutLoop.md
@@ -4,7 +4,7 @@ title: "Out-Loop"
 role: "Programmer"
 categories: [games]
 permalink: /games/OutLoop/
-previewImage: "/assets/images/OutLoop/cover.png"
+image: "/assets/images/OutLoop/cover.png"
 imageNeedsText: true
 category: game-jam
 screenshots: [
