--- a/_posts/games/2020-11-01-FCGames.md
+++ b/_posts/games/2020-11-01-FCGames.md
@@ -4,7 +4,7 @@ title: "FC Games"
 role: "Engineer & Designer"
 categories: [games]
 permalink: /games/FCGames/
-previewImage: "/assets/images/FCGames/fcgames.jpg"
+image: "/assets/images/FCGames/fcgames.jpg"
 imageNeedsText: true
 category: job
 screenshots: ["/assets/images/FCGames/fcgames.jpg"]
