--- a/_posts/games/2020-12-01-Scratch3D.md
+++ b/_posts/games/2020-12-01-Scratch3D.md
@@ -5,7 +5,7 @@ displayTitle: "Scratch-3D"
 role: "Sole Developer"
 categories: [games]
 permalink: /games/Scratch3D/
-previewImage: /assets/images/Scratch/scratch-capture-1.png
+image: /assets/images/Scratch/scratch-capture-1.png
 imageNeedsText: true
 category: game-jam
 screenshots: [
