--- a/_posts/games/2021-11-01-Rebound.md
+++ b/_posts/games/2021-11-01-Rebound.md
@@ -5,7 +5,7 @@ displayTitle: "Rebound"
 role: "Programmer, Gameplay Designer"
 categories: [games]
 permalink: /games/Rebound/
-previewImage: /assets/images/Rebound/Rebound-title-smaller.gif
+image: /assets/images/Rebound/Rebound-title-smaller.gif
 category: game-jam
 screenshots: [
     "/assets/images/Rebound/Rebound-layout.png",
