--- a/_posts/games/2024-09-26-DUETween.md
+++ b/_posts/games/2024-09-26-DUETween.md
@@ -5,7 +5,7 @@ displayTitle: "DUETween"
 role: "Programmer"
 categories: [games]
 permalink: /games/DUETween/
-previewImage: /assets/images/YuuBowling/due-tween.gif
+image: /assets/images/YuuBowling/due-tween.gif
 imageNeedsText: true
 category: game-jam
 screenshots: [
