Update DUETween + Yuu Bowling

--- a/_posts/games/2024-09-26-DUETween.md
+++ b/_posts/games/2024-09-26-DUETween.md
@@ -35,6 +35,8 @@ I built DUETween because I fell in love with [DOTween](https://dotween.demigiant
 
 Full plugin is available on [Github](https://github.com/jaideng123/DUETween)!
 
+Used to build [Yuu Recreations: Bowling](/games/YuuBowling/)
+
 # How does it work?
 ## C++ API:
 To get you started there are some handy methods to do common tasks like rotation and movement:
