Yuu Bowling Update

--- a/_posts/games/2024-09-26-DUETween.md
+++ b/_posts/games/2024-09-26-DUETween.md
@@ -109,8 +109,8 @@ The Blueprint API Currently Supports:
 
 I built DUETween primarily because I fell in love with [DOTween](https://dotween.demigiant.com/) while making Unity games and couldn't find any existing plugins in Unreal that replicated it's power and ease of use.
 
-Initially it started as a collection of blueprint functions I had written but eventually it grew into a full C++ project. Throughout development I tried to keep the API as simple and flexible as I could for both C++ and Blueprint while still providing good performance wherever I could get it.
+Initially it started as a collection of blueprint functions I had written but eventually it grew into a full C++ plugin. Throughout development I tried to keep the API as simple and flexible as I could for both C++ and Blueprint while still providing good performance wherever I could get it.
 
 DUETween runs in a world subsystem that tracks and updates a linked list of active running tweens in a compact pool that I manually manage the memory for. The pool uses a free-list allocated within the pool itself to track available slots as new tweens come in, this makes it fast to create tweens in order to avoids frame time spikes, but does lead to some amount of fragmentation over time which could slightly degrade performance as we jump around the allocated pool. Each tween in the pool is about 272 bytes (squished together as tightly as I could get them). The pool itself can grow as new tweens come in (up to a limit) and users can set the parameters for the pool's initial size, growth factor, and max size.
 
-I tested DUETween not only in a stress-test scene and various prototypes but also in my game [Yuu Recreations: Bowling](/games/YuuBowling/) where it's used for most of the (non-skeletal) animations like the UI buttons bouncing, the run-up motion of the bowler, the pin-setter, and much more!
+I tested DUETween not only in a stress-test scene and various prototypes but also in my game [Yuu Recreations: Bowling](/games/YuuBowling/) where it's used for most of the (non-skeletal) animations in the game like the UI buttons bouncing, the run-up motion of the bowler, the pin-sweep, and much more!
